# Smith-Waterman

./: CMakeLists.txt  Fasta.cpp  Fasta.hpp  README.md  fasta.cpp  fasta.hpp  main.cpp
alignment/: AlignmentResult.cpp  AlignmentResult.hpp  Direction.hpp  SmithWaterman.cpp  SmithWaterman.hpp  alignment_result.cpp  constants.hpp  direction.hpp  smith_waterman.cpp  smith_waterman.hpp  smith_waterman.tpp  smith_waterman_cuda.cu  smith_waterman_naive.cpp  smith_waterman_xsimd.cpp  utils.hpp
data/: BCL2.fa  TP53.fa  actb.fa  brca1.fa  cyp2e1.fa  gapdh.fa
